Revert "fix: change rendering of font on iOS"
This reverts commit 685c836377b31c3f93b3bb0f5d5b95a55d62daf0.

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   height: 80vh;
   width: 100%;
   background-color: #b3b3b3;
-  text-rendering: optimizeLegibility;
 }
 
 body {
